# local-dwh-clickhouse-dbt

./: .gitignore  README.md  pyproject.toml
clickhouse/: docker-compose.yaml
dbt_ch/: dbt_project.yml  profiles.yml
dbt_ch/models/: genre_stats.sql  properties.yml
scripts/seed_data/: Makefile  ingest.sql
