[project]
name = "local-dwh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-clickhouse>=1.9.1",
    "dbt-core>=1.9.1",
    "elementary-data[clickhouse]>=0.18.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[tool.ruff]
line-length = 100
